k8s/containers/network/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: network
spec:
  selector:
    app: network
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  sessionAffinity: None
  type: ClusterIP
